--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-jupyterlab = "*"
-seaborn = "*"
+jupyterlab = "==1.1.3"
+seaborn = "==0.9.0"
+pandas = "==0.25.1"
+torch = "==1.2.0"
 
 [requires]
 python_version = "3.7"
