--- a/Pipfile
+++ b/Pipfile
@@ -10,8 +10,11 @@ jupyterlab = "==1.1.3"
 seaborn = "==0.9.0"
 pandas = "==0.25.1"
 torch = "==1.2.0"
-tensorflow = "==1.14.0"
-tensorflow-probability = "==0.7.0"
+numpy = "==1.16.4"
+scikit-learn = "*"
+tensorflow = "*"
+tensorflow-probability = "*"
+statsmodels = "*"
 
 [requires]
 python_version = "3.7"
