--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ scikit-learn = "*"
 tensorflow = "*"
 tensorflow-probability = "*"
 statsmodels = "*"
+altair = "*"
 
 [requires]
 python_version = "3.7"
