--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ seaborn = "==0.9.0"
 pandas = "==0.25.1"
 torch = "==1.2.0"
 numpy = "==1.16.4"
-scikit-learn = "*"
+scikit-learn = "==0.21.3"
 tensorflow = "*"
 tensorflow-probability = "*"
 statsmodels = "*"
